Updated animated link, prevent scrollbar from layout shift

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -63,6 +63,11 @@
   * {
     @apply border-border;
   }
+  html {
+    /* Scrollbar layout shift solution: https://stackoverflow.com/a/39289453 */
+    overflow-x: hidden;
+    margin-right: calc(-1 * (100vw - 100%));
+  }
   body {
     @apply bg-background leading-7 text-foreground;
   }
